Final Deliverables/Project Code/kubernetes/flask-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-ibmapp-service
spec:
  type: NodePort
  selector:
    app: flask-ibm
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 31036
